# iashow

./: .gitignore  .gitmodules  CMakeLists.txt  bsl
ia/: CMakeLists.txt
ia/ia/: showia.py
ia/src/: py_wrap.cpp  python_mat.cpp
libvideo/: CMakeLists.txt
libvideo/include/: tvshow_info.h  video_parser.h
libvideo/src/: cv_video_traveler.cpp  video_parser.cpp
libvideo/test/: CMakeLists.txt  test_serialization.cpp
yaia/: CMakeLists.txt  app.h  home.h  main.cpp  new_project.h  player.h  video_extractor_window.h
yaia/shaders/: frag.glsl  vert.glsl
